# coding-interview-university

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: programming-language-resources.md
src/: CMakeLists.txt  dynamicArray.h  dynamicArray.hpp  linkedList.h  linkedList.hpp
tests/: CMakeLists.txt  main.cpp  test_dynamicArray.cpp  test_linkedList.cpp
